[gd_scene load_steps=5 format=2]

[ext_resource path="res://Characters/Archer_Enemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/Character/wizard-modified.png" type="Texture" id=2]
[ext_resource path="res://Characters/GunTimer.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 48.8365

[node name="Archer_Enemy" type="KinematicBody2D" groups=["archers"]]
rotation = 1.5708
scale = Vector2( 2, 2 )
collision_layer = 9
collision_mask = 9
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 5, 5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 4.37114e-08 )
shape = SubResource( 1 )

[node name="EndofGun" type="Node2D" parent="."]
position = Vector2( 40.5001, 31.4999 )

[node name="GunDirection" type="Node2D" parent="."]
position = Vector2( 20, -2.00007 )

[node name="GunTimer" type="Timer" parent="."]
script = ExtResource( 3 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 0.1
target_desired_distance = 0.1

[node name="NavigationTimer" type="Timer" parent="."]
wait_time = 21.557

[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]
[connection signal="timeout" from="NavigationTimer" to="." method="_on_NavigationTimer_timeout"]
